--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "ethers": "6.13.4",
-    "@farcaster/frame-sdk": "latest"
+    "@farcaster/frame-sdk": "latest",
+    "opensea-js": "^7.1.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
